@@ -1,3 +1,15 @@
+2004-03-12  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	Backport:
+	2004-01-12  Richard Henderson  <rth@redhat.com>
+	PR opt/10776
+	* typeck2.c (split_nonconstant_init_1, split_nonconstant_init): New.
+	(store_init_value): Use it.
+	* decl.c (check_initializer): Expect full initialization code
+	from store_init_value.
+	* init.c (expand_aggr_init_1): Likewise.
+	* decl2.c (maybe_emit_vtables): Abort if runtime init needed.
+
 2004-03-09  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
 
 	PR c++/14409
